# oxiproto

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.ffi-audit  README.md  TODO.md  deny.toml
crates/oxiproto/: Cargo.toml  README.md  TODO.md  build.rs
crates/oxiproto-build/: Cargo.toml  README.md  TODO.md
crates/oxiproto-build/benches/: parse.rs  parse_bench.rs
crates/oxiproto-build/src/: builder.rs  compile_str.rs  error.rs  lib.rs
crates/oxiproto-build/src/parser/: ast.rs  comments.rs  descriptor.rs  error.rs  lexer.rs  loader.rs  mod.rs  outline.rs  parse.rs  resolve.rs  span.rs  token.rs
crates/oxiproto-build/tests/: codegen.rs  compile_str.rs  fds_interop.rs  fuzz_proto.rs  lexer.rs  native_fds.rs  native_imports.rs  outline.rs  parse.rs  rte.rs
crates/oxiproto-cli/: Cargo.toml  README.md  TODO.md
crates/oxiproto-cli/benches/: startup.rs
crates/oxiproto-cli/src/: breaking.rs  convert.rs  describe.rs  doc.rs  format.rs  gen.rs  lint.rs  main.rs  man.rs  util.rs
crates/oxiproto-cli/tests/: cli.rs
crates/oxiproto-codegen/: Cargo.toml  README.md  TODO.md  build.rs
crates/oxiproto-codegen/benches/: codegen.rs
crates/oxiproto-codegen/src/: builder_impl.rs  emit.rs  format.rs  json_impl.rs  lib.rs  message_impl.rs  options.rs  text_impl.rs  type_registry.rs  wkt_map.rs
crates/oxiproto-codegen/tests/: emit.rs  format.rs  integration.rs  json_emit.rs  message_emit.rs
crates/oxiproto-codegen/tests/fixtures/: nested.proto  oneof_map.proto  scalars.proto  services.proto
crates/oxiproto-core/: Cargo.toml  README.md  TODO.md
crates/oxiproto-core/benches/: message.rs  wire.rs
crates/oxiproto-core/src/: arena.rs  extensions.rs  lib.rs  message.rs  name.rs  oneof.rs  reflect_bridge.rs
crates/oxiproto-core/src/wire/: alloc_profile.rs  buf.rs  fixed.rs  length_delimited.rs  mod.rs  tag.rs  unknown.rs  varint.rs  wire_type.rs  zigzag.rs
crates/oxiproto-core/tests/: extensions.rs  fuzz_corpus.rs  fuzz_decode.rs  message_trait.rs  no_std_smoke.rs  oneof.rs  proptest_message.rs  proptest_wire.rs  prost_cross_validate.rs  reflect_bridge_tests.rs  serde_wire.rs  wire_compat.rs
crates/oxiproto-json/: Cargo.toml  README.md
crates/oxiproto-json/src/: codec.rs  from_json.rs  lib.rs  to_json.rs
crates/oxiproto-json/tests/: canonical.rs  round_trip.rs  wkt_json.rs
crates/oxiproto-reflect/: Cargo.toml  README.md  TODO.md
crates/oxiproto-reflect/benches/: dynamic_bench.rs  memory_bench.rs  pool_bench.rs
crates/oxiproto-reflect/src/: dynamic.rs  lib.rs
crates/oxiproto-reflect/src/native/: descriptor.rs  dynamic.rs  json.rs  mod.rs  pool.rs  text.rs  value.rs  wire_codec.rs
crates/oxiproto-reflect/tests/: dynamic.rs  integration_build.rs  native_json.rs  native_text.rs  native_wire.rs  pool.rs
crates/oxiproto-wkt/: Cargo.toml  README.md  TODO.md
crates/oxiproto-wkt/benches/: wkt.rs
crates/oxiproto-wkt/src/: any_ext.rs  api_ext.rs  duration.rs  empty.rs  field_mask.rs  lib.rs  list_value.rs  source_context.rs  time_feature.rs  timestamp.rs  type_ext.rs  wrappers.rs
crates/oxiproto-wkt/tests/: any_dynamic.rs  chrono_interop.rs  field_mask.rs  list_value.rs  rfc3339.rs  time_interop.rs  wkt.rs
crates/oxiproto/src/: lib.rs  migration.rs
crates/oxiproto/tests/: conformance.rs  feature_flags.rs  integration.rs  json_roundtrip.rs  type_identity.rs
crates/oxiproto/tests/fixtures/: user.proto
scripts/: ffi-audit.sh
