[package]
name = "oxiproto-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust protobuf code generator from FileDescriptorSet to Rust structs/enums"
keywords = ["protobuf", "codegen", "prost"]
categories = ["development-tools"]

[features]
default = []
format = ["dep:syn", "dep:prettyplease"]

[dependencies]
prost-types.workspace = true
oxiproto-core.workspace = true

[dependencies.syn]
workspace = true
optional = true

[dependencies.prettyplease]
workspace = true
optional = true

[dev-dependencies]
syn = { workspace = true, features = ["full"] }
prost = { workspace = true, features = ["derive"] }
prost-build.workspace = true
oxiproto-build = { path = "../oxiproto-build", version = "0.1.1" }
serde_json.workspace = true
base64.workspace = true
oxiproto-wkt = { path = "../oxiproto-wkt", version = "0.1.1" }

[dev-dependencies.criterion]
workspace = true

[build-dependencies]
prost-build.workspace = true

[[bench]]
name = "codegen"
harness = false
