[package]
name = "oxiproto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust protobuf toolkit (no protoc)"
keywords = ["protobuf", "prost", "codegen"]
categories = ["encoding"]

[features]
default = []
build = ["dep:oxiproto-build"]
reflect = ["dep:oxiproto-reflect"]
wkt = ["dep:oxiproto-wkt"]
wkt-chrono = ["wkt", "oxiproto-wkt/chrono"]
codegen = ["dep:oxiproto-codegen"]
json = ["dep:oxiproto-json"]
json-runtime-harness = []

[dependencies]
oxiproto-core.workspace = true

[dependencies.oxiproto-build]
workspace = true
optional = true

[dependencies.oxiproto-reflect]
workspace = true
optional = true

[dependencies.oxiproto-wkt]
workspace = true
optional = true

[dependencies.oxiproto-codegen]
workspace = true
optional = true

[dependencies.oxiproto-json]
workspace = true
optional = true

[build-dependencies]
prost-build.workspace = true
prost-types.workspace = true
oxiproto-codegen.workspace = true

[dev-dependencies]
prost = { workspace = true, features = ["derive"] }
prost-types.workspace = true
oxiproto-codegen.workspace = true
oxiproto-wkt.workspace = true
serde_json.workspace = true
base64.workspace = true
